# agent-cli-alicloud

./: .gitignore  AGENTS.md
agent-cli-alicloud/: .gitignore  Makefile  README.md  install.sh  pyproject.toml  ruff.toml
agent-cli-alicloud/src/agent_cli_alicloud/: __init__.py  __main__.py  cli.py
agent-cli-alicloud/src/agent_cli_alicloud/core/: __init__.py  detector.py  init_flow.py  installer.py  llm.py  manifest.py  scaffold.py
agent-cli-alicloud/src/agent_cli_alicloud/skills/agent-cli-alicloud-deploy/: SKILL.md
agent-cli-alicloud/src/agent_cli_alicloud/skills/agent-cli-alicloud-eval/: SKILL.md
agent-cli-alicloud/src/agent_cli_alicloud/skills/agent-cli-alicloud-scaffold/: SKILL.md
agent-cli-alicloud/src/agent_cli_alicloud/skills/agent-cli-alicloud-workflow/: SKILL.md
agent-cli-alicloud/src/agent_cli_alicloud/skills/deploy/: SKILL.md
agent-cli-alicloud/src/agent_cli_alicloud/templates/: agents_md.j2  clarification_md.j2  eval_plan_md.j2  next_steps_md.j2  scaffold_agent_init.j2  scaffold_main.j2  scaffold_pyproject.j2  scaffold_test.j2  scaffold_tools_init.j2  scope_md.j2
agent-cli-alicloud/tests/: __init__.py  conftest.py  test_cli_info.py  test_cli_init.py  test_cli_setup.py  test_core.py  test_detector.py  test_golden.py  test_manifest.py
agent-cli-alicloud/tests/golden/: __init__.py  test_init_xiaohongshu.py
agent-cli-alicloud/tests/golden/xiaohongshu_demo/: AGENTS.md  clarification.md  eval-plan.md  expected_main.py  expected_manifest.yaml  expected_pyproject.toml  expected_tree.txt  next-steps.md  pyproject.toml  scope.md
xiaohongshu-trend-agent/: .env.example  AGENTS.md  README.md  agent-cli-manifest.yaml  eval-plan.md  pyproject.toml  scope.md
xiaohongshu-trend-agent/data/: README.md  sample_trending_notes.json
xiaohongshu-trend-agent/src/agent/: __init__.py  main.py
xiaohongshu-trend-agent/src/agent/tools/: __init__.py  trend_fetcher.py
xiaohongshu-trend-agent/tests/: test_e2e_xiaohongshu.py  test_main.py
(+31 files in other folders)
