[project]
name = "agent-cli-alicloud"
version = "0.1.0"
description = "让任意 Coding Agent 把一句模糊的 Agent 想法，5 分钟内变成结构化设计文档 + 可运行的脚手架"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "jinja2>=3.1",
    "dashscope>=1.14",
    "openai>=1.0",
]

[project.scripts]
agent-cli = "agent_cli_alicloud.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cli_alicloud"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_cli_alicloud.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/golden"]
