[project]
name = "agent-cli-alicloud"
version = "0.2.0"
description = "阿里云 Agent 开发脚手架 CLI — CLI + Skills 双层架构"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
agent-cli = "agent_cli_alicloud.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cli_alicloud"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
